--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ article, aside, figure, footer, header, hgroup, menu, nav, section { display: bl
 .group { display: inline-block; clear: both; }
 /* start commented backslash hack \*/ * html .group { height: 1%; } .group { display: block; } /* close commented backslash hack */
 
-body { font: 12px/2 "Helvetica Neue",Helvetica,Arial,sans-serif;}
+body { font: normal 10px/32px Arial, sans-serif; background: url(../images/bg.png) repeat;}
 
 /*
 TYPOGRAPHY
@@ -68,7 +68,7 @@ a {color: #ce9702; text-decoration: none;}
 #main-nav li:hover ul {display: block; width: 100%;}
 
 /***** LOGIN *****/
-#login {border: 1px solid #55A1D2; padding: 5px 0 10px 10px; color: #0F699D;}
+#login {border: 1px solid #55A1D2; padding: 5px 0 10px 10px; color: #0F699D; font-size: 14px;}
 #login label {padding-bottom: 5px;}
 #login input {padding: 3px 0;}
 #login a {color: #0F699D;}
@@ -79,6 +79,62 @@ a {color: #ce9702; text-decoration: none;}
 #login #pass {width: 157px;}
 
 /***** FOOTER *****/
-#footer {width: 100%; overflow: hidden; border-bottom: 2px solid #F0F0F0; padding-bottom: 15px;}
+#footer {width: 100%; overflow: hidden; border-bottom: 2px solid white; padding-bottom: 15px; font-size: 14px; line-height: 1.8em;}
 .ftypical {width: 200px; float: left; margin: 0 25px 0 0px;}
 .ftypical h2 {font-size: 14px; color: #0F699D; border-top: 1px dashed #0F699D; border-bottom: 1px dashed #0F699D; font-weight: bold;}
+#copyright {font-size: 12px;}
+
+/***** ACCORDION MENU *****/
+.accordion_menu li > a {
+    display: block; position: relative;
+    min-width: 110px; height: 30px;
+    padding: 0 10px 0 10px;
+    font-size: 12px;
+    background: #0F669B; color: #F3D74F;
+    background: -moz-linear-gradient(top,  #3A97D0 0%, #0F669B 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#3A97D0), color-stop(100%,#0F669B));
+    background: -webkit-linear-gradient(top,  #3A97D0 0%,#0F669B 100%);
+    background: -o-linear-gradient(top,  #3A97D0 0%,#0F669B 100%);
+    background: -ms-linear-gradient(top,  #3A97D0 0%,#0F669B 100%);
+    background: linear-gradient(top,  #3A97D0 0%,#0F669B 100%);
+    -webkit-box-shadow: inset 0px 1px 0px 0px rgba(255,255,255, .1), 0px 1px 0px 0px rgba(0,0,0, .1);
+    -moz-box-shadow: inset 0px 1px 0px 0px rgba(255,255,255, .1), 0px 1px 0px 0px rgba(0,0,0, .1);
+    box-shadow: inset 0px 1px 0px 0px rgba(255,255,255, .1), 0px 1px 0px 0px rgba(0,0,0, .1);
+}
+.accordion_menu > li:hover > a,
+.accordion_menu > li:target > a,
+.accordion_menu > li > a.active {
+    text-shadow: 1px 1px 1px rgba(255,255,255, .2);
+    background: #0F669B; color: #F3D74F;
+    font-weight: bold;
+    background: -moz-linear-gradient(top,  #3A97D0 0%, #0F669B 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#3A97D0), color-stop(100%,#0F669B));
+    background: -webkit-linear-gradient(top,  #3A97D0 0%,#0F669B 100%);
+    background: -o-linear-gradient(top,  #3A97D0 0%,#0F669B 100%);
+    background: -ms-linear-gradient(top,  #3A97D0 0%,#0F669B 100%);
+    background: linear-gradient(top,  #3A97D0 0%,#0F669B 100%);
+    -webkit-box-shadow: inset 0px 1px 0px 0px rgba(255,255,255, .1), 0px 1px 0px 0px rgba(0,0,0, .1);
+    -moz-box-shadow: inset 0px 1px 0px 0px rgba(255,255,255, .1), 0px 1px 0px 0px rgba(0,0,0, .1);
+    box-shadow: inset 0px 1px 0px 0px rgba(255,255,255, .1), 0px 1px 0px 0px rgba(0,0,0, .1);
+}
+
+/***** SUB MENU *****/
+.sub-menu li a {
+    padding-left:40px;
+    background: #e5e5e5;color: #797979;
+    border-bottom: 1px solid #c9c9c9;
+    text-shadow: 1px 1px 0px rgba(255,255,255, .2);
+    -webkit-box-shadow: inset 0px 1px 0px 0px rgba(255,255,255, .1), 0px 1px 0px 0px rgba(0,0,0, .1);
+    -moz-box-shadow: inset 0px 1px 0px 0px rgba(255,255,255, .1), 0px 1px 0px 0px rgba(0,0,0, .1);
+    box-shadow: inset 0px 1px 0px 0px rgba(255,255,255, .1), 0px 1px 0px 0px rgba(0,0,0, .1);
+}
+.sub-menu li:hover a { background: #efefef; }
+.sub-menu li:last-child a { border: none; }
+.sub-menu em {
+    position: absolute; top: 0; left: 0;
+    margin-left: 14px; color: #a6a6a6;
+    font-size: 12px;
+}
+.accordion_menu li > .sub-menu { display: none;}
+.accordion_menu li:target > .sub-menu { display: block;}
+
